# AGE

./: CMakeLists.txt
CMake/: Wrapper.cmake
Editor/: CMakeLists.txt  Editor_files.cmake  Files.cmake
Editor/Source/: Main.cpp
